# companies-house-database-manager

./: .gitignore  README.md  basic-csv-to-db.js  basic-sample.csv  csv-to-db.js  financials-to-db.js  package-lock.json  package.json  sic-csv-to-db.js
DataLake/: docker-compose.yaml
DataLake/graph/: BulkCompaniesCsvMongo.ts  Dockerfile  getArangoClient.ts  getMongoClient.ts  index.ts  loadDataFromMongo.ts  package-lock.json  package.json  tsconfig.json
DataLake/ingester/: .dockerignore  Dockerfile  entrypoint.sh  keepalive.js  processes.config.js  processes.json
DataLake/psql/: Dockerfile  companies.sql
DataLake/sharedTypes/: tsconfig.json
DataLake/trawler/: Counter.ts  Dockerfile  keepalive.js  package.json  processes.config.js  tsconfig.json
DataSources/: basic.sh  companies.sh  loadDocker.sh  postcodes.sh  psc.sh  sic.sh  updateAll.sh
accounts/cloudFunction/: index.js  index.ts  package-lock.json  package.json  testbench.ts  tsconfig.json
accounts/python-xbrl-processor/: index.py
accounts/xbrlProcessor/: abstractLoader.ts  downloadZip.ts  headquarters.ts  hqTester.http  newLoader.ts  newLoaderChildProcess.ts  package.json  pivotTable.ts  (+6 more)
api-enumerations/: filing-history-descriptions.yaml
events/: gcloudDeployNewFunction.txt
js/: accounts.js  axiosStream.js  basic.js  logCompanyEvents.js  logFilingEvents.js  pipeRequest.js  sic.js  yamlToDb.js
officers/read-officer-file/: CMakeLists.txt  PersonRow.h  database.c  database.h  main.c  main.h  readFile.c  readFile.h  writeCsv.c  writeCsv.h
samples/: factlist.json  factslistfull.csv
sh/: psc.sh
(+62 files in other folders)
